--- a/ZONE-watcher/app/views/stats/index.html.erb
+++ b/ZONE-watcher/app/views/stats/index.html.erb
@@ -1,7 +1,17 @@
 <h1>Listing stats</h1>
 
-<table border ="1">
+<div class="row">
+  <div class="span3"></div>
+  <div class="span6">
 
+
+<table class ="table table-condensed table-striped table-hover ">
+  <thead>
+  <tr>
+    <th>kind</th>
+    <th>value</th>
+  </tr>
+  </thead>
 <% @stats.each do |entry| %>
   <tr>
     <td><u><%= entry[:kind] %></u></td>
@@ -9,6 +19,11 @@
   </tr>
 <% end %>
 </table>
+    </div>
+
+  <div class="span3"></div>
+</div>
 
 
-<iframe frameborder='0' height='1100px' width='1200px' id='embedded' src='https://www.stathat.com/cards/Q1gcKQzP5kn3' />
+<iframe seamless="seamless"  scrolling="no" frameborder='0' height='1000px' width='1200px' id='embeddedAnnot' src='https://www.stathat.com/cards/Q1gcKQzP5kn3'></iframe>
+<iframe seamless="seamless" scrolling="no" frameborder='0' height='650px' width='1200px' id='embeddedNews' src='https://www.stathat.com/cards/6k8DJewGHfte'></iframe>
