--- a/ZONE-watcher/app/views/items/show.html.erb
+++ b/ZONE-watcher/app/views/items/show.html.erb
@@ -1,6 +1,6 @@
 <%
    if @item.props["http://purl.org/rss/1.0/image"] != nil
-     image=@item.props["http://purl.org/rss/1.0/image"][0].html_safe
+     image=@item.props["http://purl.org/rss/1.0/image"][:value][0].html_safe
    end
 %>
 
@@ -44,7 +44,7 @@
             <!--content news part -->
             <div class="contentArticle">
 				<%= if @item.props["http://purl.org/rss/1.0/description"] != nil
-        			@item.props["http://purl.org/rss/1.0/description"][0].html_safe 
+        			@item.props["http://purl.org/rss/1.0/description"][:value][0].html_safe
         		end %>
 			</div>
 			<div class="btn-toolbar tags-toolbar">
