bigger add button for rss feeds and twitter

--- a/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
@@ -191,6 +191,15 @@ span.label-wrap{
   
 }
 
+.formHeader.twitterB{
+  background-color:#49afcd;
+}
+
+.titleFormContent.twitterB{
+  background-color:#49afcd;
+}
+
+
 /**
  *   End of twitter source section
  */
