--- a/ZONE-watcher/app/assets/stylesheets/search_box.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/search_box.css.scss
@@ -48,3 +48,14 @@
 .ui-helper-hidden-accessible { 
   display:none; 
 }
+
+.input-prefix{
+  padding-top:10px!important;
+  width:33px !important;
+  height:28px !important;
+  font-size: 30px !important;
+}
+.input-search{
+  font-size: 17.5px !important;
+  height:44px !important;
+}
