--- a/ZONE-watcher/app/views/sources/index.html.erb
+++ b/ZONE-watcher/app/views/sources/index.html.erb
@@ -36,7 +36,7 @@
 						<% next if source.theme == actualTableTheme  %>
 					  	<li class="<%= firstClass %>" ondrop="dropSource(event,'<%=source.theme%>')" ondragover="allowDrop(event)">
 					  		<a href="#source<%= source.theme %>">
-					  			<%= source.theme %> <i class="icon-chevron-right pull-right"></i>
+                              <%=  ( source.theme != "undefined") ? source.theme : t('source.list.defaultTheme') %> <i class="icon-chevron-right pull-right"></i>
 					  		</a>
 					  		
 					  	</li>
@@ -76,7 +76,7 @@
 			<% end %>
 			<% if startNewTable %>
 				<fieldset id="source<%= source.theme %>">
-					<%= raw t('source.list.theme')%> :<%= source.theme %>
+					<%= raw t('source.list.theme')%> :<%=  ( source.theme != "undefined") ? source.theme : t('source.list.defaultTheme') %>
 					<table id="<%=source.theme%>" class="table table-bordered table-striped">
 						<thead>
 							<tr>
