--- a/ZONE-watcher/app/assets/stylesheets/items.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/items.css.scss
@@ -304,6 +304,7 @@ a.label:visited{
 }
 
 .editNameInputFrom{
+  width: 120px !important;
   margin-bottom:0px !important;
   margin-top:0px !important;
   padding-top:0px !important;
