put the left menu on hover back

--- a/ZONE-watcher/app/views/searches/_left_menu.html.erb
+++ b/ZONE-watcher/app/views/searches/_left_menu.html.erb
@@ -25,7 +25,7 @@
 <script type="text/javascript">
     $(function() {
         $('[rel="popoverx"]').popoverx({
-            fire_on : 'click',
+            fire_on : 'hover',
             hover_delay_close : 2000,
             onHidden :
                     function() {
