--- a/ZONE-watcher/app/views/searches/_left_menu.html.erb
+++ b/ZONE-watcher/app/views/searches/_left_menu.html.erb
@@ -1,7 +1,7 @@
 
 
 
-<ul class="nav nav-list bs-docs-sidenav" style="max-width: 180px; position: fixed">
+<ul class="nav nav-list bs-docs-sidenav" style="max-width: 180px;">
   <% @searches.each do |curSearch| %>
 
           <% descriptionSearchBox  = render "searches/reminder_panel", :localSearch => curSearch %>
